// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FB login correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      <Icon
        name="Facebook"
        size={12}
      />
        Facebook
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`renders Google login correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      <Icon
        name="Google"
        size={12}
      />
        Google
    </Text>
  </TouchableOpacity>
</View>
`;
